--- a/Papers/preyTouch/preytouch_figures.ipynb
+++ b/Papers/preyTouch/preytouch_figures.ipynb
@@ -642,6 +642,27 @@
   {
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2024-11-20T16:39:31.613156Z",
+     "start_time": "2024-11-20T16:39:28.068174Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "!pip freeze | grep sea",
+   "id": "98c213f622957fb6",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "seaborn==0.13.0\r\n"
+     ]
+    }
+   ],
+   "execution_count": 37
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
      "end_time": "2024-11-19T14:52:07.402075Z",
      "start_time": "2024-11-19T14:52:06.924099Z"
     }
